prepared game field, v_0_0_2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
   </head>
   <body>
 
-
+    <div class="main">
+      <div class="gamefield">
+        <table>
+          <tr>
+            <td id="00"></td><td id="01" class="td-border del-topline"></td><td id="02"></td>
+          </tr>
+          <tr>
+            <td id="10" class="td-border del-leftline"></td><td id="11" class="td-border"></td><td id="12" class="td-border del-rightline"></td>
+          </tr>
+          <tr>
+            <td id="20"></td><td id="21" class="td-border del-bottomline"></td><td id="22"></td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
     <script src="./script.js"></script>
   </body>
