--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
 
     <div class="main">
+
+      <div class="shapes">
+        <button id="cross-btn">Начать игру за крестики</button>
+        <button id="ring-btn">Начать игру за нолики</button>
+      </div>
+
       <div class="gamefield">
         <table>
           <tr>
