wrote logic setting the shapes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="gamefield">
         <table>
           <tr>
-            <td id="00" class="cross"></td><td id="01" class="td-border del-topline ring"></td><td id="02"></td>
+            <td id="00"></td><td id="01" class="td-border del-topline"></td><td id="02"></td>
           </tr>
           <tr>
             <td id="10" class="td-border del-leftline"></td><td id="11" class="td-border"></td><td id="12" class="td-border del-rightline"></td>
